# MCP-Practice

./: .gitignore  README.md
quick_starts/: client.py  client_quick_start.py  server.py
quick_starts/connect_mcp_server/: main.py
quick_starts/weather_service/: README.md  pyproject.toml
quick_starts/weather_service/src/weather_service/: server.py
quick_starts/weather_service/tests/: weather_test.py
